Documentation/Scripts/Yaml/Iis-site-windows-v3.yaml
############################
# @author Elias De Hondt   #
# @see https://eliasdh.com #
# @since 25/04/2024        #
############################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iis-site-windows
  labels:
    app: iis-site-windows
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iis-site-windows
  template:
    metadata:
      labels:
        app: iis-site-windows
    spec:
      nodeSelector:
        kubernetes.io/os: windows
      containers:
      - name: iis-site-windows
        image: eliasdh/iis-site-windows:v1.0
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iis-site-windows
spec:
  rules:
  - host: demo-cs2.eliasdh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iis-site-windows
            port:
              number: 80
